--- a/style.css
+++ b/style.css
@@ -261,7 +261,8 @@ body {
   grid-template-columns: 1fr;
   grid-column-gap: 0;
   grid-row-gap: 88px;
-  padding: 114px 24px;
+  padding-top: 114px;
+  padding-bottom: 114px;
 }
 
 .card {
@@ -275,6 +276,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 16px;
+  margin: 0 24px;
   gap: 12px;
 
   /* Neutrals/N0 */
@@ -433,7 +435,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 114px 24px;
   gap: 24px;
   border-top-right-radius: 100px;
   background-color: #fff;
@@ -447,8 +448,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0;
   gap: 12px;
+  margin: 114px 24px 0 24px;
 }
 
 .skill {
@@ -460,6 +461,10 @@ body {
   flex-direction: column;
   width: 100%;
   padding: 0;
+}
+
+.skill-lst-mrg {
+  margin: 0 24px 114px 24px;
 }
 
 .frame-7 {
