--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+html {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   background: #f7f7f9;
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .pd-0 {
