--- a/style.css
+++ b/style.css
@@ -615,10 +615,8 @@ body {
   color: #172b4d;
 }
 
-@media only screen and (max-width: 768px) {
-  #menu-lst {
-    display: none;
-  }
+#menu-lst {
+  display: none;
 }
 
 @media only screen and (min-width: 768px) {
@@ -658,5 +656,50 @@ body {
 
   .menu-lst-txt a {
     text-decoration: none;
+  }
+
+  #headline {
+    display: flex;
+    flex-direction: column;
+    width: -webkit-fill-available;
+    margin-top: 71px;
+    margin-left: 2.55%;
+    margin-right: 0.6%;
+    align-items: flex-start;
+    background-image: url(img/desktop-version/Header-bg.svg);
+    padding: 0;
+  }
+
+  .headline-txt {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    gap: 12px;
+    margin: 20.07%  18%;
+  }
+
+  .txt-1 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 60px;
+
+    /* or 125% */
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.37px;
+
+    /* Theme 1 / Neutrals 1 */
+
+    color: #091e42;
+  }
+
+  .txt-2 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: #344563;
   }
 }
