--- a/style.css
+++ b/style.css
@@ -627,6 +627,10 @@ body {
   display: none;
 }
 
+button {
+  transition: all 0.5s ease-in;
+}
+
 @media only screen and (min-width: 768px) {
   #btn-menu {
     display: none;
