--- a/style.css
+++ b/style.css
@@ -655,7 +655,7 @@ img:hover {
 #overlay {
   /* Overlay */
   display: none;
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   top: 0;
