--- a/style.css
+++ b/style.css
@@ -357,6 +357,15 @@ body {
   border-radius: 8px;
 }
 
+#error {
+  display: none;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
+
 .mobile-btn:hover {
   /* Button / Hover */
 
