--- a/style.css
+++ b/style.css
@@ -59,7 +59,17 @@ body {
   background: #fff;
 }
 
-#headline { 
+#nav {
+  display: flex;
+  justify-content: space-between;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 10px;
+  background-color: white;
+}
+
+#headline {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -69,7 +79,7 @@ body {
   width: 100%;
 }
 
-.headline-txt { 
+.headline-txt {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -95,7 +105,7 @@ body {
   flex-grow: 0;
 }
 
-.order-3 {  
+.order-3 {
   flex: none;
   order: 3;
   flex-grow: 0;
@@ -188,7 +198,7 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 16px;  
+  line-height: 16px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -210,6 +220,7 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
+  height: 42px;
 
   /* identical to box height, or 120% */
 
@@ -223,6 +234,7 @@ body {
   font-weight: 500;
   font-size: 15px;
   line-height: 20px;
+  text-align: center;
 }
 
 .scl-icons {
@@ -230,6 +242,12 @@ body {
   flex-direction: row;
   list-style: none;
   gap: 20px;
+}
+
+ul.scl-icons li:hover img {
+  filter: brightness(80%) saturate(200%) hue-rotate(180deg);
+  transform: scale(1.3);
+  transition: 0.5s;
 }
 
 .txt-j {
@@ -285,6 +303,18 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
+}
+
+.img-new {
+  align-self: center;
+  width: 100%;
+  max-width: 650px;
+  border-radius: 5%;
+}
+
+.img-new:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 
 .block-txt {
@@ -344,6 +374,7 @@ body {
   align-items: center;
   padding: 12px;
   gap: 10px;
+  cursor: pointer;
 
   /* Theme 1 / Primary Colors 2 */
 
@@ -401,7 +432,7 @@ body {
 .mobile-btn-txt {
   font-style: normal;
   font-weight: 500;
-  font-size: 17px;
+  font-size: 13px;
   line-height: 24px;
 
   /* identical to box height, or 141% */
@@ -458,6 +489,7 @@ body {
 
 .frame-7 {
   display: flex;
+  position: relative;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
@@ -565,6 +597,8 @@ body {
   padding-top: 45px;
   padding-bottom: 45px;
   gap: 18px;
+  width: 90%;
+  align-items: center;
 }
 
 .input {
@@ -683,6 +717,7 @@ button {
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(6px);
   padding: 60px 16px;
+  z-index: 9999;
 }
 
 .popUpContent {
@@ -731,6 +766,7 @@ button {
 .popUpLst {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   flex-wrap: wrap;
   gap: 12px;
   align-items: center;
@@ -835,16 +871,106 @@ button {
   color: #fff;
 }
 
-@keyframes slide-in {
+.h1-animation {
+  animation: deslizar-derecha 1s forwards;
+  transform: translateX(100%);
+}
+
+.p-animation {
+  animation: slide-left 1s forwards;
+  transform: translateX(100%);
+}
+
+.item-up {
+  animation: slide-up 1s forwards;
+  transform: translateY(100%);
+}
+
+.imground {
+  border-radius: 5%;
+}
+
+.hide-item {
+  display: none;
+}
+
+.show-item {
+  display: block;
+}
+
+@keyframes deslizar-derecha {
   from {
-    margin-left: 50%;
-    width: 80%;
+    transform: translateX(100%);
   }
 
   to {
-    margin-left: 0%;
-    width: 100%;
+    transform: translateX(0%);
   }
+}
+
+@keyframes slide-left {
+  from {
+    transform: translateX(-100%);
+  }
+
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes slide-up {
+  from {
+    transform: translateY(100%);
+  }
+
+  to {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes hide-lngs {
+  from {
+    display: flex;
+    opacity: 1;
+  }
+
+  to {
+    height: 0;
+    padding: 0;
+    opacity: 0;
+  }
+}
+
+@keyframes show-lngs {
+  from {
+    height: 0;
+    padding: 0;
+    opacity: 0;
+  }
+
+  to {
+    display: flex;
+    opacity: 1;
+  }
+}
+
+.hide-skills {
+  animation: hide-lngs 0.2s;
+  animation-fill-mode: forwards;
+}
+
+.show-skills {
+  animation: show-lngs 0.2s;
+  animation-fill-mode: forwards;
+}
+
+.img-size {
+  width: 50px;
+  height: 50px;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 @media only screen and (min-width: 768px) {
@@ -852,14 +978,29 @@ button {
     display: none;
   }
 
+  .hide-item {
+    display: none;
+  }
+
   #toolbar {
     display: flex;
     flex-direction: row;
     align-items: center;
-    position: fixed;
     width: 77.5%;
     justify-content: space-between;
     padding: 26px 12%;
+  }
+
+  #nav {
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-top: 10px;
+    background-color: white;
+    z-index: 9998; /* to ensure it's on top of other elements */
   }
 
   #menu-lst {
@@ -868,7 +1009,9 @@ button {
     align-items: center;
     list-style: none;
     padding: 0;
+    margin-right: 15px;
     gap: 32px;
+    background-color: #fff;
   }
 
   .menu-lst-txt {
@@ -883,11 +1026,15 @@ button {
     text-decoration: none;
   }
 
+  .menu-lst-txt:hover {
+    text-decoration: underline;
+    color: blueviolet;
+  }
+
   #headline {
     display: flex;
     flex-direction: column;
     width: -webkit-fill-available;
-    margin-top: 71px;
     margin-left: 2.55%;
     margin-right: 0.6%;
     align-items: flex-start;
@@ -901,7 +1048,7 @@ button {
     align-items: flex-start;
     padding: 0;
     gap: 12px;
-    margin: 20.07%  18%;
+    margin: 16%  18%;
   }
 
   .txt-1-dsktp {
@@ -952,6 +1099,11 @@ button {
     border-radius: 16px;
   }
 
+  .card:hover {
+    border: solid 1px blue;
+    transition: 1s;
+  }
+
   .works {
     display: grid;
     grid-template-columns: 1fr;
@@ -982,7 +1134,8 @@ button {
   .dsktp-crd-img {
     display: flex;
     width: 100%;
-    min-width: 200px;
+    min-width: 100px;
+    border-radius: 5%;
   }
 
   .txt-4-dsktp {
@@ -1112,6 +1265,14 @@ button {
     width: 50%;
   }
 
+  .lng-list-off {
+    display: none;
+    flex-direction: row;
+    padding: 12px 12px;
+    gap: 12px;
+    width: 50%;
+  }
+
   .frame-9 {
     display: flex;
     flex-direction: column;
@@ -1120,7 +1281,7 @@ button {
     border-radius: 8px;
     padding-left: 12px;
     gap: 16px;
-    align-items: flex-start;
+    align-items: center;
   }
 
   .contact-me-bg {
@@ -1166,7 +1327,10 @@ button {
   }
 
   .popUpBlock2 {
-    width: 29%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
     margin-top: 0;
   }
 
